--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -1,80 +1,44 @@
-#wrapperLogin {
-	position: relative;
-	top: 10%;
+body {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #eee;
 }
 
-.box {
-	border: 2px solid #a1a1a1;
-	padding: 10px 10px;
-	border-radius: 25px;
-	shadow-radius: 30px;
-	min-width: 380px;
-	-webkit-box-shadow: 0 6px 6px 0 #C2C2C2;
-	box-shadow: 0 6px 6px 0 #C2C2C2;
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+.form-signin .form-signin-heading,
+.form-signin .checkbox {
+  margin-bottom: 10px;
+}
+.form-signin .checkbox {
+  font-weight: normal;
+}
+.form-signin .form-control {
+  position: relative;
+  height: auto;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="text"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
-.button {
-	color: #000000;
-	font-size: 10pt;
-	border: 2px solid #a1a1a1;
-	border-radius: 7px;
-	padding: 0;
-	background: #F5F5F5;
+#failed{
+	margin:10px;
 }
-
-#buttonTable {
-	width: 100%;
-}
-
-#btnForgotPassword {
-	align: center;
-	width: 70%;
-	height: 40px;
-	padding-left: 3%;
-	padding-right: 3%;
-	min-width: 140px;
-}
-
-#btnLogin {
-	align: center;
-	width: 100%;
-	height: 40px;
-	min-width: 80px;
-}
-
-#forgotPasswordEntry {
-	padding-left: 15%;
-	padding-top: 5%;
-	width: 50%;
-}
-
-#loginEntry {
-	padding-right: 10%;
-	padding-top: 5%;
-	padding-left: 7%;
-	width: 50%;
-}
-
-#loginContainer {
-	width: 40%;
-}
-
-#password {
-	border: 1px solid #a1a1a1;
-	border-radius: 4px;
-}
-
-#username {
-	border: 1px solid #a1a1a1;
-	border-radius: 4px;
-}
-
-#footerLogin {
-	position: relative;
-	padding-top: 15%;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	text-align: center;
-}
-
